# quadstore

./: .gitignore  README.md  csv_to_quads.py  main.py  pyproject.toml  requirements.txt
chroma_db/: chroma.sqlite3
data/: nba_stats_2023_quads.jsonl
examples/: basic_usage.py
src/quadstore/: __init__.py  core.py
tests/: test_quadstore.py
