[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quadstore"
version = "0.1.0"
description = "A simple in-memory quadstore for knowledge graphs."
authors = [
    { name="Matthew Mayo", email="mattmayo13@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
